# eduanimaR

./: .env  .env.example  CLOUD_RUN.md  Makefile  README.md  cloudbuild.yaml  docker-compose.prod.yml  docker-compose.yml  researchFindings.md
eduanimaR_Librarian/: .cursorrules  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
eduanimaR_Librarian/docs/: README.md
eduanimaR_Librarian/docs/00_quickstart/: PROJECT_DECISIONS.md  QUICKSTART.md
eduanimaR_Librarian/docs/01_architecture/: CLEAN_ARCHITECTURE.md  COMPONENT_ARCHITECTURE.md  DB_SCHEMA_DESIGN.md  EDUANIMA_LIBRARIAN_SERVICE_SPEC.md  FSD_LAYERS.md  MICROSERVICES_MAP.md  RESILIENCY.md  SLICES_MAP.md  SYNC_STRATEGY.md
eduanimaR_Librarian/docs/02_tech_stack/: ECHO_HANDLERS.md  ELASTICSEARCH_OPS.md  GO_1_25_GUIDE.md  MUI_PIGMENT.md  SEARCH_INFRA_OPS.md  SQL_QUERY_RULES.md  STACK.md  TS_GUIDE.md
eduanimaR_Librarian/docs/03_integration/: API_CONTRACT_WORKFLOW.md  API_GEN.md  API_VERSIONING_DEPRECATION.md  CONTRACT_TESTING.md  ERROR_CODES.md  ERROR_HANDLING.md  EVENT_CONTRACTS.md  INTERNAL_RPC_STANDARDS.md  INTER_SERVICE_COMM.md  PROTOBUF_GRPC_STANDARDS.md
eduanimaR_Librarian/docs/04_testing/: PERFORMANCE_LOAD_TESTING.md  TEST_PYRAMID.md  TEST_STRATEGY.md
eduanimaR_Librarian/docs/05_operations/: API_SECURITY.md  AUDIT_LOGGING.md  CI_CD.md  DATA_PROTECTION_DR.md  IDENTITY_ZERO_TRUST.md  INCIDENT_POSTMORTEM.md  MIGRATION_FLOW.md  OBSERVABILITY.md  PROGRESSIVE_DELIVERY.md  RELEASE_DEPLOY.md  SECRETS_KEY_MANAGEMENT.md  SLO_ALERTING.md  (+1 more)
eduanimaR_Librarian/tests/: conftest.py
(+309 files in other folders)
